[package]
name = "graph-similarity-cmd"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/graph-similarity-cmd"
description = "Command-line utility to calculate similarity between two graphs"
keywords = ["graph", "similarity"]

include = ["src/bin/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

graph-neighbor-matching = "0.6.1"
graph-io-gml = "0.1"
asexp = "0.3"
petgraph = "0.2"
closed01 = "0.4"
